--- a/project.yaml
+++ b/project.yaml
@@ -24,6 +24,6 @@ products:
   - testing-tools
 # If file under the path is changed, the all product will be rebuilt
 global-paths:
-  - .github/workflows
+  # - .github/workflows
   - .github/scripts
-  - .scripts
+  # - .scripts
