ci: change ci condition

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,6 +22,7 @@ jobs:
       registry: quay.io/zncdatadev
       cache-registry: quay.io/zncdatadev
       targets: ${{ matrix.targets }}
+      push: false
     strategy:
       matrix:
         targets: ${{ fromjson(needs.prepare.outputs.targets) }}
