fix(build): update arm64 runner configuration to use correct instance

--- a/.github/workflows/build_hadoop.yaml
+++ b/.github/workflows/build_hadoop.yaml
@@ -65,7 +65,7 @@ jobs:
             runner: ubuntu-latest
           - arch: arm64
             platform: linux/arm64
-            runner: ubicloud-standard-8-arm-ubuntu-2404
+            runner: ubuntu-24.04-arm
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
