--- a/spark-k8s/versions.yaml
+++ b/spark-k8s/versions.yaml
@@ -1,11 +1,11 @@
 versions:
-  - product: 3.5.2
+  - product: 3.5.5
     java-base: 17
     java-devel: 17
     python: 3.11
-    hadoop: 3.3.6
-    # hbase: 2.6.1
-    jmx-exporter: 1.1.0
+    hadoop: 3.4.1
+    hbase: 2.6.2
+    jmx-exporter: 1.3.0
     aws-java-sdk-bundle: 2.24.6
     azure-storage: 7.0.1
     azure-keyvault-core: 1.0.0
@@ -15,9 +15,9 @@ versions:
     java-base: 17
     java-devel: 17
     python: 3.11
-    hadoop: 3.3.6
-    # hbase: 2.6.1
-    jmx-exporter: 1.1.0
+    hadoop: 3.4.1
+    hbase: 2.6.2
+    jmx-exporter: 1.3.0
     aws-java-sdk-bundle: 2.24.6
     azure-storage: 7.0.1
     azure-keyvault-core: 1.0.0
