--- a/hbase/versions.yaml
+++ b/hbase/versions.yaml
@@ -1,19 +1,19 @@
 versions:
-  - product: 2.4.18
-    java-base: 11
-    java-devel: 11
-    hadoop: 3.3.6
-    hbase-operator-tools: 1.2.0
-    hbase-thirdparty: 4.1.5
-    jmx-exporter: 1.3.0
-    phoenix: 5.2.1
-    hbase-profile: 2.4
-    async-profiler: 2.9
-    oauth2-proxy: 7.12.0
   - product: 2.6.1
     java-base: 11
     java-devel: 11
     hadoop: 3.3.6
+    hbase-operator-tools: 1.3.0-fd5a5fb
+    hbase-thirdparty: 4.1.5
+    jmx-exporter: 1.3.0
+    phoenix: 5.2.1
+    hbase-profile: 2.6
+    async-profiler: 2.9
+    oauth2-proxy: 7.12.0
+  - product: 2.6.2
+    java-base: 11
+    java-devel: 11
+    hadoop: 3.4.1
     hbase-operator-tools: 1.3.0-fd5a5fb
     hbase-thirdparty: 4.1.5
     jmx-exporter: 1.3.0
